--- a/pytest.ini
+++ b/pytest.ini
@@ -3,7 +3,7 @@
 addopts = -s --alluredir ./report/my_allure_results
 # 报告路径 --html =./report/test.html 重试次数 --reruns 3
 # 文件搜索路径 ./case/app
-testpaths = ./case/app
+testpaths = ./case/mp
 # 文件名称
 python_files = test_*
 # 类名称
